# ADTLinOrgInheritance

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Complex.h  Exceptions.h  IEnumerator.h  Matrix.h  Output.h  Solver.h
tests/: test_Matrix.cpp  test_Solver.cpp
